always 1 cent steps

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="firstName">Quantity:</label>
-                        <input type="number" min="{{min_purchase}}" class="form-control" id="quantity" name="quantity" placeholder="" value="{{min_purchase}}"
+                        <input type="number" step="{{ step }}" min="{{min_purchase}}" class="form-control" id="quantity" name="quantity" placeholder="" value="{{min_purchase}}"
                                required>
                     </div>
                     <div class="col-md-6 mb-3">
