--- a/views/donations.twig
+++ b/views/donations.twig
@@ -21,52 +21,39 @@
 <div class="container">
     <div class="py-5 text-center">
         <img class="d-block mx-auto mb-4 rounded" src="{{ logo }}" alt="" width="72" height="72">
-        <h2>Buy {{ token }}</h2>
+        <h2>{{ token }} Donation List</h2>
+
         <p class="lead">
-            Enter the amount of {{ token }}s you want to plant as well as your steem account that should appear in the donation list.
-            <br>You can optionally also set a memo.
-            <br>
-        <h4>${{ price }} USD plants 1 {{ token }}</h4>
+                <h4>Total planted TREEs: {{ data.totalBurn }}</h4>
+        <h5>Plant TREEs yourself: <a href="/">$1.00USD plants 1 TREE</a></h5>
         </p>
     </div>
 
     <div class="row">
         <div class="col-12">
-            <form action="/checkout" method="post" class="needs-validation">
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="firstName">Quantity:</label>
-                        <input type="number" step="{{ step }}" min="{{min_purchase}}" class="form-control" id="quantity" name="quantity" placeholder="" value="{{min_purchase}}"
-                               required>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="username">Steem Account</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">@</span>
-                            </div>
-                            <input type="text" class="form-control" name="receiver" placeholder="Username" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="email">Memo <span class="text-muted">(Optional)</span></label>
-                    <input type="text" class="form-control" name="memo" placeholder="">
-                </div>
-
-                <hr class="mb-4">
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout ($<span id="total">{{ total }}</span>USD) </button>
-            </form>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Planted TREEs</th>
+                        <th>Steem Username</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in data.data %}
+                        <tr>
+                            <td>{{ loop.index }}</td>
+                            <td>{{ row.quantity }} TREEs</td>
+                            <td>{{ row.account }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
-    <div class="row mt-3">
-        <div class="col-12">
-            <p class="alert alert-info">
-                <i><b>Save the Planet</b></i> with TREE. For each TREE token purchased we donate ${{ price }}USD to the #teamtrees project run by the popular YouTuber MrBeast.
-            </p>
-        </div>
-    </div>
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; {{ ""|date("Y") }} {{contact.name}}</p>
