--- a/views/layout.twig
+++ b/views/layout.twig
@@ -68,6 +68,13 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col text-center">
+            <h4>
+                <a href="/donations">Show Planted Trees</a>
+            </h4>
+        </div>
+    </div>
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy; {{ ""|date("Y") }} {{contact.name}}</p>
         <ul class="list-inline">
