fix title and thank you page

--- a/views/canceled.twig
+++ b/views/canceled.twig
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Buy {{ token }} with Bitcoin, Ethereum and more crypto currencies.">
+    <meta name="description" content="Plant {{ token }}s with Bitcoin, Ethereum and more crypto currencies.">
     <meta name="author" content="@wehmoen">
     <link rel="icon" href="{{ logo }}">
 
-    <title>Buy {{ token }} with Bitcoin</title>
+    <title>Plant {{ token }}s with Bitcoin, Ethereum and more crypto currencies. </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/checkout/">
 
@@ -23,7 +23,7 @@
         <img class="d-block mx-auto mb-4 rounded" src="{{ logo }}" alt="" width="72" height="72">
         <h2>Oh no!</h2>
         <p class="lead">
-            The payment was canceled. If you had any issues buying {{ token }} please let {{ contact.name }} know by sending an E-Mail: <a href="mailto:{{ contact.email }}?subject={{ token }}%20Purchase">{{contact.email}}</a>.
+            The payment was canceled. If you had any issues planting {{ token }}s please let {{ contact.name }} know by sending an E-Mail: <a href="mailto:{{ contact.email }}?subject={{ token }}%20Purchase">{{contact.email}}</a>.
             <h4><a href="/" class="btn btn-block btn-primary">To Homepage</a></h4>
         </p>
     </div>
