--- a/views/layout.twig
+++ b/views/layout.twig
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Buy {{ token }} with Bitcoin, Ethereum and more crypto currencies.">
+    <meta name="description" content="Plant {{ token }}s with Bitcoin, Ethereum and more crypto currencies.">
     <meta name="author" content="@wehmoen">
     <link rel="icon" href="{{ logo }}">
 
-    <title>Buy {{ token }} with Bitcoin</title>
+    <title>Plant {{ token }}s with Bitcoin, Ethereum and more crypto currencies.</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/checkout/">
 
