--- a/views/thankyou.twig
+++ b/views/thankyou.twig
@@ -23,7 +23,7 @@
         <img class="d-block mx-auto mb-4 rounded" src="{{ logo }}" alt="" width="72" height="72">
         <h2>Thank You!</h2>
         <p class="lead">
-            We received your payment. You should receive your {{ token }} within a few seconds. If you do not receive your tokens within 30 minutes from now please contact {{ contact.name }} via E-Mail: <a href="mailto:{{ contact.email }}?subject={{ token }}%20Purchase">{{contact.email}}</a>.
+            Thank you for planting TREEs! Check the <a href="/donations">donation list</a> to see your contribution!
             <h4><a href="/" class="btn btn-block btn-primary">To Homepage</a></h4>
         </p>
     </div>
