fix title and thank you page

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -81,6 +81,11 @@
             <li class="list-inline-item"><a href="//steemit.com/@{{ contact.steem }}">Blog</a></li>
             <li class="list-inline-item"><a href="mailto:{{ contact.email }}?subject={{ token }}%20Purchase">Contact</a></li>
         </ul>
+
+        <p class="mt-2 text-muted"><i>
+                This project is not affiliated with MrBeast or teamtrees.org. We just want to offer everyone to plant trees with crypto.
+                For proof of donation follow our Steem Blog: <a href="//steemit.com/@{{ contact.steem }}">@{{ contact.steem }}</a>.
+            </i></p>
     </footer>
 </div>
 
